--- a/Debug/makefile
+++ b/Debug/makefile
@@ -52,6 +52,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 TechnoHack_2024.list \
 
+OBJCOPY_BIN += \
+TechnoHack_2024.bin \
+
 
 # All Target
 all: main-build
@@ -61,7 +64,7 @@ main-build: TechnoHack_2024.elf secondary-outputs
 
 # Tool invocations
 TechnoHack_2024.elf TechnoHack_2024.map: $(OBJS) $(USER_OBJS) C:\Users\Lawantar\STM32CubeIDE\workspace_1.15.1\TechnoHack_2024\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "TechnoHack_2024.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Lawantar\STM32CubeIDE\workspace_1.15.1\TechnoHack_2024\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TechnoHack_2024.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "TechnoHack_2024.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Lawantar\STM32CubeIDE\workspace_1.15.1\TechnoHack_2024\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TechnoHack_2024.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -75,12 +78,17 @@ TechnoHack_2024.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+TechnoHack_2024.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "TechnoHack_2024.bin"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
-	-$(RM) TechnoHack_2024.elf TechnoHack_2024.list TechnoHack_2024.map default.size.stdout
+	-$(RM) TechnoHack_2024.bin TechnoHack_2024.elf TechnoHack_2024.list TechnoHack_2024.map default.size.stdout
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
